[package]
name = "zix"
description = "A modern API builder and documentation generator with API schema generation integration."
version = "1.0.0"
homepage = "https://zix-api.vercel.app"
repository = "https://github.com/zix-api/zix"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
categories = ["API", "API Schema", "API Builder", "API Generator", "API Docs Generator"]

[dependencies]
clap = "4.5.20"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
